# datafusion-remote-table

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: postgres.rs
integration-tests/: Cargo.toml
integration-tests/src/: cmd.rs  lib.rs  shared_containers.rs  utils.rs
integration-tests/testdata/: dm_init.sql  docker-compose.yaml  mysql_init.sql  oracle_init.sql  postgres_init.sql  sqlite3.db  sqlite_init.sql
integration-tests/testdata/oracle_init/: oracle_init.sql
integration-tests/tests/: mysql.rs  oracle.rs  postgres.rs  sqlite.rs  transform.rs
integration_tests/: Cargo.toml
integration_tests/src/: docker.rs  lib.rs
integration_tests/testdata/: docker-compose.yaml  postgres_init.sql
integration_tests/tests/: mysql.rs
remote-table/: Cargo.toml  build.rs
remote-table/examples/: dm.rs  postgres.rs
remote-table/src/: codec.rs  exec.rs  lib.rs  schema.rs  table.rs  transform.rs  unparse.rs  utils.rs
remote-table/src/connection/: dm.rs  mod.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
remote-table/src/connection/dm/: buffer.rs  mod.rs  row.rs
src/: codec.rs  exec.rs  lib.rs  schema.rs  table.rs  transform.rs
src/connection/: mod.rs  mysql.rs  postgres.rs
tests/: mysql.rs  postgres.rs  shared_containers.rs
tests/testdata/: docker-compose.yaml  postgres_init.sql
tests/utils/: cmd.rs  docker.rs  mod.rs
