[package]
name = "datafusion-remote-table"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "45"
datafusion-proto = "45"
async-trait = "0.1"
futures = "0.3"
async-stream = { version = "0.3" }
bb8 = { version = "0.9" }
bb8-postgres = { version = "0.9" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }