[package]
name = "datafusion-remote-table"
version = "0.8.0"
edition = "2024"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "A DataFusion table provider for executing SQL queries on remote databases"
keywords = ["SQL", "database", "datafusion", "postgres", "mysql"]
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-remote-table"
readme = "../README.md"

[dependencies]
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
async-trait = "0.1"
futures = "0.3"
async-stream = { version = "0.3" }
chrono = "0.4"
time = "0.3"
bigdecimal = "0.4"
num-bigint = "0.4"
byteorder = "1.5.0"
serde_json = "1.0"
prost = { workspace = true }
derive-with = "0.6"
tokio = { workspace = true }
bb8 = { version = "0.9" }
# Postgres
bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1"] }
# MySQL
mysql_async = { version = "0.35", features = [
    "native-tls-tls",
    "chrono",
    "time",
    "bigdecimal",
] }
# Oracle
oracle = "0.6"
bb8-oracle = { version = "0.3", features = ["chrono"]}
# Sqlite
rusqlite = { version = "0.32", features = ["column_decltype"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }