[package]
name = "datafusion-remote-table"
version = "0.13.0"
edition = "2024"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "A DataFusion table provider for executing SQL queries on remote databases"
keywords = ["SQL", "database", "datafusion", "postgres", "mysql"]
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-remote-table"
readme = "../README.md"

[features]
default = ["postgres", "mysql", "oracle", "sqlite"]
postgres = ["dep:bb8", "dep:bb8-postgres"]
mysql = ["dep:mysql_async"]
oracle = ["dep:bb8", "dep:oracle", "dep:bb8-oracle"]
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
dm = ["dep:odbc-api", "dep:arrow-odbc"]

[dependencies]
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
async-trait = "0.1"
futures = "0.3"
async-stream = { version = "0.3" }
chrono = "0.4"
time = "0.3"
bigdecimal = "0.4"
num-bigint = "0.4"
byteorder = "1.5.0"
serde_json = "1.0"
prost = { workspace = true }
derive-with = "0.6"
derive-getters = "0.5"
itertools = "0.14"
tokio = { workspace = true }
bb8 = { version = "0.9", optional = true }
# Postgres
bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
# MySQL
mysql_async = { version = "0.35", features = [
    "native-tls-tls",
    "chrono",
    "time",
    "bigdecimal",
], optional = true }
# Oracle
oracle = { version = "0.6", optional = true }
bb8-oracle = { version = "0.3", features = ["chrono"], optional = true}
# Sqlite
rusqlite = { workspace = true, features = ["column_decltype"], optional = true }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"], optional = true }
# Dm
odbc-api = { version = "12.2", optional = true }
arrow-odbc = { version = "15.0", optional = true }